RESOLVED FIXED103794
AX: the text of render counters are not exposed to Accessibility
https://bugs.webkit.org/show_bug.cgi?id=103794
Summary AX: the text of render counters are not exposed to Accessibility
chris fleizach
Reported 2012-11-30 17:53:10 PST
Use something like this and the text of "1, 2, 3" won't be exposed to accessibility <style> ol li::before { content: counter(l1) ":"; counter-increment: l1;} ol li { list-style-type: decimial; display: block; } </style> <div style="counter-reset:l1;"> <ol style="list-style-type:decimal"><li>asdf<li>qwerwqer<li>yasdsf</ol> </div>
Attachments
patch (4.70 KB, patch)
2012-11-30 17:57 PST, chris fleizach
rniwa: review+
webkit.review.bot: commit-queue-
chris fleizach
Comment 1 2012-11-30 17:57:23 PST
WebKit Review Bot
Comment 2 2012-12-02 05:52:17 PST
Comment on attachment 177070 [details] patch Attachment 177070 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/15105131 New failing tests: inspector-protocol/debugger-terminate-dedicated-worker-while-paused.html
Ryosuke Niwa
Comment 3 2013-01-07 13:01:36 PST
Comment on attachment 177070 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=177070&action=review > LayoutTests/accessibility/render-counter-text-expected.txt:3 > +line1 > +line2 > +line3 Could you hide this before the test finishes?
chris fleizach
Comment 4 2013-01-07 15:34:57 PST
chris fleizach
Comment 5 2013-01-07 15:35:20 PST
chris fleizach
Comment 7 2013-01-07 17:43:46 PST
Weird. I'll look into it tonight.
chris fleizach
Comment 8 2013-01-08 01:04:09 PST
It looks like the <select> element are calculating textUnderElement() and the <option> elements are RenderText things. Looking how AX is done for popup buttons, it seems we are doing things incorrectly at least on the Mac. The Mac should return the the selected <option> as the AXValue and not use the textUnderElement() as its title. There are a few tests that rely on pop up buttons having an AXTitle.
Ryosuke Niwa
Comment 9 2013-01-08 10:55:41 PST
Presumably http://trac.webkit.org/changeset/139077 fixes the test failure?
chris fleizach
Comment 10 2013-01-08 10:56:19 PST
(In reply to comment #9) > Presumably http://trac.webkit.org/changeset/139077 fixes the test failure? No, that was another bug semi-independent. I nearly have a fix ready for this one
Ryosuke Niwa
Comment 11 2013-01-08 10:58:13 PST
(In reply to comment #10) > (In reply to comment #9) > > Presumably http://trac.webkit.org/changeset/139077 fixes the test failure? > > No, that was another bug semi-independent. I nearly have a fix ready for this one Okay. It'll be great if you could upload & land that ASAP. Currently, it's only test failing on build.webkit.org ML/Lion release bots.
chris fleizach
Comment 12 2013-01-08 10:59:48 PST
Note You need to log in before you can comment on or make changes to this bug.