AX: the text of render counters are not exposed to Accessibility https://bugs.webkit.org/show_bug.cgi?id=103794

Reviewed by Ryosuke Niwa.

Source/WebCore:

Support RenderText objects that don't have nodes (like RenderCounter).

Test: accessibility/render-counter-text.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::textUnderElement):

LayoutTests:

* accessibility/render-counter-text-expected.txt: Added.
* accessibility/render-counter-text.html: Added.



Canonical link: https://commits.webkit.org/124462@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139002 268f45cc-cd09-0410-ab3c-d52691b4dbfc