Source/WebCore/accessibility/AccessibilityRenderObject.cpp
@@ -669,10 +669,12 @@ String AccessibilityRenderObject::textUnderElement() const
         }
     
         // Sometimes text fragments don't have Nodes associated with them (like when
-        // CSS content is used to insert text).
+        // CSS content is used to insert text or when a RenderCounter is used.)
         RenderText* renderTextObject = toRenderText(m_renderer);
         if (renderTextObject->isTextFragment())
             return String(static_cast<RenderTextFragment*>(m_renderer)->contentString());
+        else
+            return String(renderTextObject->text());
     }
     
     return AccessibilityNodeObject::textUnderElement();
